// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.service getProtocolSummary request with currency returns the protocol summary in requested base currency 1`] = `
Object {
  "setts": Array [
    Object {
      "balance": 160912.73437961238,
      "name": "Badger",
      "value": 558060.59,
    },
  ],
  "totalValue": 558060.59,
  "vaults": Array [
    Object {
      "balance": 160912.73437961238,
      "name": "Badger",
      "value": 558060.59,
    },
  ],
}
`;

exports[`vaults.service getProtocolSummary request with no currency returns the protocol summary in usd base currency 1`] = `
Object {
  "setts": Array [
    Object {
      "balance": 160912.73437961238,
      "name": "Badger",
      "value": 1116121.18,
    },
  ],
  "totalValue": 1116121.18,
  "vaults": Array [
    Object {
      "balance": 160912.73437961238,
      "name": "Badger",
      "value": 1116121.18,
    },
  ],
}
`;
